<resources>
    <string name="app_name">CrudAppProjectLcnoStrd</string>
    <string name="create">Create User</string>
    <string name="fetch_users">Fetch Users</string>
    <string name="update_user">Update User</string>
    <string name="delete_user">Delete User</string>
    <string name="driver_name">Driver Name</string>
    <string name="plate_number">Plate Number</string>
    <string name="truck_condition">Truck Condition</string>
    <string name="truck_type">Truck Type</string>
    <string name="please_enter_driver_name">Please enter driver name</string>
    <string name="please_enter_plate_number">Please Enter Plate Number</string>
    <string name="please_enter_truck_condition">Please Enter truck condition</string>
    <string name="please_enter_truck_type">Please enter truck type</string>
    <string name="please_enter_customers_name">Please enter customers name</string>
    <string name="please_enter_customers_number">Please enter customers mobile no.</string>
    <string name="please_enter_customers_street">Please enter customers street</string>
    <string name="date_to_deliver">Date to deliver</string>
    <string name="please_enter_total">Please enter total</string>
    <string name="paid_or_not">Paid or not</string>
    <string name="please_wait">Please Wait…</string>

    <string name="driver_name_formatted">Driver Name: %1$s</string>
    <string name="plate_number_formatted">Plate Number: %1$s</string>
    <string name="truck_condition_formatted">Truck Condition: %1$s</string>
    <string name="truck_type_formatted">Truck Type: %1$s</string>
    <string name="inserted_at_formatted">Inserted At: %1$s</string>
    <string name="entered_in_formatted">Entered In: %1$s</string>
    <string name="truck_cargo_formatted">Truck Cargo: %1$s</string>


    <string name="name_formatted">Customer Name: %1$s</string>
    <string name="mobile_formatted">Mobile No: %1$s</string>
    <string name="street_formatted">Street to Deliver: %1$s</string>
    <string name="total_formatted">Total: %1$s</string>
    <string name="dates_formatted">Date to Deliver: %1$s</string>
    <string name="status_formatted">Paid or Not: %1$s</string>
    <string name="paid_formatted">Paid</string>
    <string name="id">ID</string>
    <string name="please_enter_id">Please Enter ID</string>
    <string name="start">start</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_driver">Create Driver</string>
    <string name="create_new_sg">Create New SG</string>
    <string name="proceed">Proceed</string>
    <string name="add_to_list">Add to List</string>
    <string name="add_new_truck">Add New Truck</string>
    <string name="fetch_truck_list">Fetch Truck List</string>
    <string name="update_truck_list">Update Truck List</string>
    <string name="delete_truck">Delete Truck</string>
    <string name="update_truck_info">Update Truck Info</string>
    <string name="inserted_at">inserted at</string>
    <string name="entered_in">Entered In</string>
    <string name="truck_cargo">Truck Cargo</string>
    <string name="date_inserted">Date Inserted</string>
    <string name="date">Date</string>
    <string name="update_list">Update List</string>
    <string name="delete_list">Delete List</string>
    <string name="name">name</string>
    <string name="mobile">mobile</string>
    <string name="street">street</string>
    <string name="total">total</string>
    <string name="dates">dates</string>
    <string name="status">status</string>
    <string name="add_customer">add customer</string>
    <string name="add_record">Add record</string>
    <string name="customers_name">Customers name</string>
    <string name="mobile_no">Mobile No</string>



</resources>