<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">


        <ImageView
            android:id="@+id/truck_logo"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/createBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/createBtn"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:text="@string/add_record"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/fetchUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/truck_logo" />

        <Button
            android:id="@+id/fetchUser"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:text="View Customers List"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/updateUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createBtn" />

        <Button
            android:id="@+id/updateUser"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:text="@string/update_list"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/deleteUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fetchUser" />

        <Button
            android:id="@+id/deleteUser"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:text="@string/delete_list"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/logout_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateUser" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="400dp"
            android:layout_height="100dp"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deleteUser" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>